# terminal-agent-lab

./: .gitignore  CLAUDE.md  KICKOFF_PROMPT.md  Readme.md  pyproject.toml
.claude/agents/: paper-analyst.md
.claude/skills/review-packet/: SKILL.md
docs/: PROJECT_SPEC.md
docs/notes/: README.md  journal.md
docs/notes/decisions/: 001-scope.md  002-harness-conventions.md  003-pipeline-design.md
docs/notes/paper/: data-pipeline.md  evaluation.md  harness.md  rl-recipe.md  verifiers.md
docs/review/: packet-2026-07-02.md  smoke-batch-2026-07-02.md
docs/review/batch6-partial/: README.md  results.jsonl
docs/review/batch6-partial/tasks/data_querying-exact_text-000314/: Dockerfile  gate.json  signature.yaml  solution.md  system_a.csv  system_b.csv  task.md
harness/: __init__.py  cli.py  command_parser.py  config.py  default.yaml  episode.py  llm.py  prompts.py  runner.py  sandbox.py  shell.py  verifier.py
pipeline/: __init__.py  axes.yaml  base_images.py  gate.py  generator.py  generator_prompt.py  sampler.py
pipeline/exemplars/: README.md  exact_text.json  metric_threshold.json
tasks/toy-hello/: Dockerfile  task.md
tasks/toy-hello/tests/: test_greeting.py
tasks/toy-pipeline/: Dockerfile  sales.csv  task.md
tasks/toy-pipeline/tests/: test_summary.py
tasks/toy-service/: Dockerfile  task.md
tasks/toy-service/tests/: test_service.py
tests/: conftest.py  test_command_parser.py  test_config.py  test_episode.py  test_gate.py  test_generator.py  test_runner.py  test_sampler.py  test_sandbox.py  test_shell.py  test_verifier.py
(+132 files in other folders)
