[project]
name = "terminal-agent-lab"
version = "0.1.0"
description = "Scoped-down replication of the TMAX paper: eval harness + compositional task pipeline for terminal agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "json5>=0.15.0",
]

[project.scripts]
harness = "harness.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: requires a running Docker daemon (auto-skipped when unavailable)",
]
